--- a/game/Dockerfile
+++ b/game/Dockerfile
@@ -1,12 +1,10 @@
-# Use an OpenJDK 17 base image
-FROM maven:3.8.4-openjdk-17-slim AS builder
-WORKDIR /app
-COPY pom.xml .
-RUN mvn dependency:go-offline
-COPY src ./src
-RUN mvn package -DskipTests
-FROM maven:3.8.4-openjdk-17-slim
-WORKDIR /app
-COPY --from=builder /app/target/*.jar game.jar
-EXPOSE 8080
-CMD ["java", "-jar", "app.jar"]
+FROM maven:amazoncorretto AS build
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -f /home/app/pom.xml clean package
+
+
+FROM adoptopenjdk/openjdk11:alpine-jre
+EXPOSE 8080:8080
+COPY --from=build /home/app/target/*.jar /usr/local/lib/game.jar
+ENTRYPOINT 	["java","-jar","/usr/local/lib/game.jar"]
