--- a/game/docker-compose.yml
+++ b/game/docker-compose.yml
@@ -1,14 +1,15 @@
-version: '3'
+version: "3"
 services:
-  app:
+  app-game:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: app-game
     ports:
-      - 8080:8080
+      - "8080:8080"
     depends_on:
       - redis
   redis:
     image: redis:latest
     ports:
-      - 6379:6379
+      - "6379:6379"
